# NekoGL

./: CMakeLists.txt
example/: main.cpp
example/architecture/general/: math.cpp
include/: canvas.h  neko_math.h  space3d.h  vectors.h
src/: canvas.cpp  space3d.cpp  vectors.cpp
